--- a/src/index.css
+++ b/src/index.css
@@ -5,52 +5,141 @@
   font-family: Mali, Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
+  padding: 0;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  /* colors */
+  --white: #fff;
+  --black: #000;
+  --primary-color: #A96224;
+  --light-orange: #F9F6F4;
+  --brown-color-25: rgba(168, 96, 74, 0.25);
+  --brown-color-50: rgba(168, 96, 74, 0.5);
+  --brown-color: rgba(168, 96, 74, 1);
+  --error: #ff0606;
+
+  /* padding space */
+  --padding-50: 50px;
+  scroll-behavior: smooth;
 }
-
-
-
+body {
+  background-color: var(--white);
+  color: var(--black);
+}
+#root {
+  margin: 0 auto;
+  padding: 0;
+  text-align: center;
+}
 body {
   margin: 0;
   display: block;
   text-align: center;
   min-width: 320px;
   min-height: 100vh;
-  
+  text-align: left;
+}
+a {
+  text-decoration: none;
+  cursor: pointer;
+}
+h2 {
+  font-size: 3.5em;
+  margin: 0;
+}
+h4 {
+  font-size: 24px;
+  font-weight: 400;
 }
 
-header{
+/*===================
+    Common Style
+====================*/
+.container {
+  max-width: 1280px;
+  margin: 0 auto;
+  display: block;
+}
+.vertical-center-wrapper {
+  display: flex;
+}
+.vertical-center-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.list-no-style {
+  list-style: none;
+}
+.tags {
+  background-color: var(--white);
+  border: 1px solid rgba(168, 96, 74, 0.1);
+  max-height: 36px;
+  text-align: center;
+  padding: 5px 0;
+  margin-bottom: 5px;
+  border-radius: 5px;
+}
+.light-orange-bg {
+  background-color: var(--light-orange);
+}
+.button {
+  display: block;
+  width: 139px;
+  line-height: 24px;
+  text-align: center;
+  color: var(--white);
+  padding: 13px 20px 13px 20px;
+  background-color: var(--brown-color);
+  border: 1px solid var(--brown-color-25);
+  border-radius: 5px;
+  font-weight: 700;
+  cursor: pointer;
+}
+input:focus {
+  outline: none;
+}
+
+/*===================
+        Header
+====================*/
+.header {
+  padding: 10px 20px;
+  background-color: var(--white);
+}
+.sticky {
+  position: fixed;
+  width: 100%;
+  z-index: 9;
+  top: 0;
+}
+.header .header-nav {
+  width: 1280px;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+nav {
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
-  width: 1000px;
-  margin:auto;
+  flex-grow: 1;
+  padding-top: 8px;
 }
-#logo{
-  width:200px;
-  padding: 20px;
-}
-
-nav{padding-top:20px;flex-grow: 1;}
-
 nav ul {
   list-style-type: none; 
   margin: 0;
   padding: 0;
+  justify-content: end;
+  display: flex;
+  width: 100%;
 }
-
 nav li {
   float: left; 
 }
-
 nav li a {
   display: block;
   color: #4C4947;
@@ -64,45 +153,241 @@ nav li a {
   color: black; /* Black text */
 }
 
+/*===================
+        Banner
+====================*/
 #carousal{
   display: block;
-  background-color: #F9F6F4;
+  height: 344px;
+}
+.banner-container {
+  display: flex;
+}
+.banner-img {
+  position: relative;
+  width: 500px;
+  text-align: center;
+}
+.banner-img img{
+  width: 470px;
+  position: absolute;
+  left: 6%;
+  top: -40px;
+}
+.banner-content > div {
+  height: 344px;;
+}
+.banner-content h1 {
+  font-size: 2em;
+  line-height: 1.6;
+  font-weight: 600;
+}
+.highlighten-text {
+  color: var(--primary-color);
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+/*===================
+        About
+====================*/
+.about-section {
+  padding: var(--padding-50) 0;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+/*===================
+        My Hats
+====================*/
+.hat-title-section {
+  padding-top: var(--padding-50);
+  padding-bottom: 160px;
+  border-bottom: 1px solid var(--brown-color-25);
+}
+.hat-title-section p {
+  padding: 20px 0;
+}
+.hat-tab-container {
+  margin-top: -172px;
+}
+.tab-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+.tab-container .tab:first-child {
+  border-top-left-radius: 5px;
+}
+.tab-container .tab:last-child {
+  border-top-right-radius: 5px;
+}
+.tab-container .tab:last-child {
+  border-right: 1px solid var(--brown-color-25);
+}
+.tab {
+  padding: 10px 20px;
   cursor: pointer;
-  transition: border-color 0.25s;
+  width: 20%;
+  border: 1px solid var(--brown-color-25);
+  border-right: 0;
+  border-bottom: 0;
 }
-button:hover {
-  border-color: #646cff;
+.tab div {
+  width: 100%;
 }
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.tab-title-content {
+  text-align: center;
+  padding: 20px 0;
+}
+.tab h6 {
+  font-size: 1em;
+  font-weight: 600;
+  margin: 8px 0 5px;
+}
+.tab img {
+  width: 40px;
+}
+.tab ul {
+  display: flex;
+  margin: 0 auto;
+  width: 90px;
+  padding: 0;
+}
+.tab ul img {
+  width: 18px;
+}
+.tab-content {
+  display: none;
+}
+.active-tab {
+  background-color: var(--white);
+  border-bottom: 0;
+}
+.active-tab .tab-title-content {
+  padding-top: 10px;
+}
+.active-tab .title-img{
+  width: 60px;
+}
+.active-content {
+  display: block;
+}
+.tab-content-wrapper {
+  padding: var(--padding-50);
+}
+.tab-inner-content {
+  display: flex;
+}
+.tab-inner-content h5 {
+  font-size: 20px;
+}
+.tab-content article:first-child {
+  width: 55%;
+}
+.tab-content article:last-child {
+  width: 45%;
+  margin-left: 50px;
+}
+.tab-content-list li {
+  margin-bottom: 20px;
+}
+.tags-wrapper {
+  padding: 25px 30px;
+  border-radius: 10px;
+}
+.tags-wrapper h5 {
+  margin: 0;
+}
+.tags-wrapper ul {
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+}
+.tags-wrapper li {
+  padding: 10px 15px;
+  margin-right: 10px;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+/*===================
+      Portfolio
+====================*/
+.portfolio-section {
+  padding: var(--padding-50) 0;
+}
+.porfolio-inner-content {
+  display: flex;
+}
+.porfolio-inner-content article:first-child {
+  width: 30%;
+}
+.porfolio-inner-content article:last-child {
+  width: 70%;
+  padding-left: 30px;
+}
+.porfolio-inner-content ul {
+  padding: 0;
+}
+.porfolio-inner-content li {
+  text-align: left;
+  color: var(--brown-color);
+  padding: 10px;
+  width: 75%;
+}
+.porfolio-inner-content li span{
+  padding: 5px 10px;
+  margin-right: 5px;
+  background-color: var(--light-orange);
+  border: 1px solid var(--brown-color-50);
+  border-radius: 50%;
+}
+.porfolio-form-row {
+  display: flex;
+  padding-top: 30px;
+}
+.porfolio-form-row h4 {
+  margin-top: 10px;
+}
+.porfolio-form-row .portfolio-password {
+  width: 35%;
+}
+.porfolio-form-row .porfolio-form {
+  width: 65%;
+  border-left: 1px solid var(--brown-color-50);
+  padding-left: var(--padding-50);
+}
+.porfolio-form-row form {
+  display: flex;
+}
+.porfolio-form-row input {
+  border: 1px solid var(--brown-color-25);
+  border-radius: 5px;
+  width: 364px;
+  height: 50px;
+  padding: 0 15px;
+  margin-right: 10px;
+}
+.error-message {
+  color: var(--error);
+  font-size: 12px;
+  visibility: hidden;
 }
 
+/*===================
+      Portfolio
+====================*/
+.connect-section {
+  padding: var(--padding-50) 0;
+}
+.connect-section h2 {
+  padding-bottom: var(--padding-50);
+}
+.connect-section a {
+  color: var(--primary-color);
+}
+.title-with-content {
+  padding-bottom: var(--padding-50);
+}
+.connect-title {
+  font-size: 24px;
+  margin: 0 0 10px;
+}
+.connect-link {
+  margin: 0;
+}
